Fixed the z-index for the controls

--- a/standbase/static/sass/standing/_base.scss
+++ b/standbase/static/sass/standing/_base.scss
@@ -59,7 +59,7 @@ h2 {
 		display: inline;
 		overflow: hidden;
 		position: absolute;
-		z-index: 2;
+		z-index: 99999;
 		height: 50px;
 		bottom: 10px;
 		right: 10px;
